--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon"  href="https://img.freepik.com/premium-vector/magician-logo-illustration_848918-18445.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Comsmic - The Hidden Secrets</title>
+    <title>Cosmic - The Hidden Secrets</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
