--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="https://img.freepik.com/premium-vector/magician-logo-illustration_848918-18445.jpg" />
+    <link rel="icon"  href="https://static.vecteezy.com/system/resources/thumbnails/006/662/881/small_2x/black-hole-vortex-with-lightning-flash-outside-science-concept-illustration-vector.jpg" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cosmic - The Hidden Secrets</title>
